--- a/index.html
+++ b/index.html
@@ -3,161 +3,196 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Taxi Tam Kỳ - Xe Quay Đầu Tam Kỳ Đà Nẵng Giá 500K</title>
 
-<meta name="description" content="Taxi Tam Kỳ, xe quay đầu Tam Kỳ Đà Nẵng giá 500K bao xe 4 chỗ. Phục vụ Tam Kỳ, Núi Thành, Phú Ninh, Tiên Phước, Thăng Bình, Nam Phước. Gọi 0904 000 047">
+<title>Taxi Tam Kỳ | Xe Quay Đầu Tam Kỳ Đà Nẵng Giá Rẻ 24/7</title>
+
+<meta name="description" content="Taxi Tam Kỳ chuyên xe quay đầu Tam Kỳ Đà Nẵng, Núi Thành, Phú Ninh, Thăng Bình, Nam Phước. Gọi ngay 0904 000 047 phục vụ 24/7 giá rẻ.">
 
 <style>
 body{
-  margin:0;
-  font-family:Arial,Helvetica,sans-serif;
-  background:#f4f6f9;
-  text-align:center;
-  color:#333;
+margin:0;
+font-family:Arial, sans-serif;
+background:linear-gradient(135deg,#ffcc00,#ff6600);
+text-align:center;
+color:#fff;
 }
 
-/* HEADER */
-.header{
-  background:#ffcc00;
-  padding:15px;
-  font-size:20px;
-  font-weight:bold;
-}
-.header a{
-  text-decoration:none;
-  color:#000;
+header{
+padding:30px 15px;
 }
 
-/* HERO */
-.hero{
-  background:linear-gradient(135deg,#111,#333);
-  color:#fff;
-  padding:70px 20px;
+h1{
+font-size:28px;
+margin:10px 0;
 }
-.hero h1{
-  font-size:26px;
-  margin-bottom:10px;
-}
-.price{
-  font-size:30px;
-  font-weight:bold;
-  color:#ffd700;
-  margin:15px 0;
-}
+
 .call-btn{
-  display:inline-block;
-  background:#ffcc00;
-  color:#000;
-  padding:15px 35px;
-  font-size:18px;
-  font-weight:bold;
-  border-radius:40px;
-  text-decoration:none;
-  box-shadow:0 4px 10px rgba(0,0,0,0.3);
+display:inline-block;
+margin-top:20px;
+padding:18px 30px;
+font-size:22px;
+background:#e60000;
+color:#fff;
+text-decoration:none;
+border-radius:50px;
+animation:rung 1s infinite;
+box-shadow:0 5px 15px rgba(0,0,0,0.3);
 }
 
-/* SECTION */
+@keyframes rung{
+0%{transform:rotate(0);}
+25%{transform:rotate(5deg);}
+50%{transform:rotate(-5deg);}
+75%{transform:rotate(5deg);}
+100%{transform:rotate(0);}
+}
+
 .section{
-  background:#fff;
-  margin:20px;
-  padding:25px;
-  border-radius:15px;
-  box-shadow:0 4px 10px rgba(0,0,0,0.08);
-}
-.section h2{
-  color:#ff6600;
-}
-.section p{
-  line-height:1.6;
-  font-size:15px;
+background:#fff;
+color:#333;
+padding:30px 15px;
+border-radius:25px 25px 0 0;
+margin-top:30px;
 }
 
-/* MAP */
-.map{
-  margin:20px;
-  border-radius:15px;
-  overflow:hidden;
+.area-list{
+font-size:18px;
+line-height:1.8;
 }
 
-/* FLOAT BUTTON */
-.float-btn{
-  position:fixed;
-  bottom:20px;
-  width:60px;
-  height:60px;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:28px;
-  text-decoration:none;
-  color:#fff;
+.review{
+font-size:20px;
+color:#ff9900;
+margin:10px 0;
 }
-.call{left:15px;background:#ffcc00;color:#000;}
-.zalo{left:85px;background:#0084ff;}
-.fb{left:155px;background:#1877f2;}
 
-@keyframes shake{
-  0%{transform:rotate(0);}
-  20%{transform:rotate(-15deg);}
-  40%{transform:rotate(15deg);}
-  60%{transform:rotate(-15deg);}
-  80%{transform:rotate(15deg);}
-  100%{transform:rotate(0);}
+img{
+width:100%;
+max-width:400px;
+border-radius:15px;
+margin:15px 0;
+box-shadow:0 5px 15px rgba(0,0,0,0.3);
 }
-.shake{
-  animation:shake 1.2s infinite;
+
+.footer{
+background:#111;
+color:#fff;
+padding:20px;
+margin-top:20px;
+}
+
+.zalo{
+position:fixed;
+bottom:20px;
+right:20px;
+background:#0084ff;
+color:#fff;
+padding:15px 20px;
+border-radius:50px;
+font-size:18px;
+text-decoration:none;
+box-shadow:0 4px 10px rgba(0,0,0,0.3);
 }
 </style>
 </head>
 
 <body>
 
-<div class="header">
-Hotline: <a href="tel:0904000047">📞 0904 000 047</a>
-</div>
+<header>
+<h1>🚖 TAXI TAM KỲ</h1>
+<p>Xe Quay Đầu Tam Kỳ - Đà Nẵng</p>
+<p>Phục vụ 24/7 – Giá rẻ – Uy tín</p>
 
-<div class="hero">
-<h1>TAXI TAM KỲ – XE QUAY ĐẦU TAM KỲ ĐÀ NẴNG</h1>
-<p>Taxi nội thành • Đi sân bay • Bao xe 4 chỗ 2 chiều</p>
-<div class="price">Bao xe Tam Kỳ – Đà Nẵng: 500K</div>
-<a href="tel:0904000047" class="call-btn">GỌI NGAY 0904 000 047</a>
-</div>
-
-<div class="section">
-<h2>Dịch vụ Taxi Tam Kỳ</h2>
-<p>
-Chuyên taxi nội thành Tam Kỳ, đi sân bay Chu Lai, Đà Nẵng,
-đi công việc, du lịch, bệnh viện. Xe 4 chỗ đời mới, tài xế kinh nghiệm.
-</p>
-</div>
+<a href="tel:0904000047" class="call-btn">
+📞 GỌI NGAY 0904 000 047
+</a>
+</header>
 
 <div class="section">
-<h2>Xe Quay Đầu Tam Kỳ – Đà Nẵng</h2>
-<p>
-Bao xe riêng 4 chỗ giá trọn gói 500K.
-Phục vụ Tam Kỳ, Núi Thành, Phú Ninh, Tiên Phước,
-Thăng Bình, Nam Phước và Đà Nẵng.
+
+<h2>KHU VỰC PHỤC VỤ</h2>
+<div class="area-list">
+Tam Kỳ<br>
+Núi Thành<br>
+Phú Ninh<br>
+Đà Nẵng<br>
+Tiên Phước<br>
+Thăng Bình<br>
+Nam Phước
+</div>
+<h2 style="margin-top:40px;">🚖 BẢNG GIÁ XE QUAY ĐẦU</h2>
+
+<p style="color:red;font-weight:bold;">
+Giá có thể thay đổi theo thời điểm – Vui lòng gọi 0904 000 047 để báo giá chính xác
 </p>
+
+<div style="display:grid;gap:15px;margin-top:20px;">
+
+<div style="background:#fff;padding:20px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);color:#000;">
+<h3>Tam Kỳ → Đà Nẵng</h3>
+<p>🚗 Xe 4 chỗ: <span style="color:red;font-weight:bold;">500.000đ</span></p>
+<p>🚙 Xe 7 chỗ: <span style="color:red;font-weight:bold;">700.000đ</span></p>
 </div>
 
-<div class="section">
-<h2>Khu vực hoạt động</h2>
-<p>
-Tam Kỳ • Núi Thành • Phú Ninh • Tiên Phước • Thăng Bình • Nam Phước • Đà Nẵng
-</p>
+<div style="background:#fff;padding:20px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);color:#000;">
+<h3>Tam Kỳ → Sân bay Đà Nẵng</h3>
+<p>🚗 Xe 4 chỗ: <span style="color:red;font-weight:bold;">500.000đ</span></p>
+<p>🚙 Xe 7 chỗ: <span style="color:red;font-weight:bold;">700.000đ</span></p>
 </div>
 
-<div class="map">
+<div style="background:#fff;padding:20px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);color:#000;">
+<h3>Tam Kỳ → Núi Thành / Chu Lai</h3>
+<p>🚗 Xe 4 chỗ: <span style="color:red;font-weight:bold;">300.000đ</span></p>
+<p>🚙 Xe 7 chỗ: <span style="color:red;font-weight:bold;">500.000đ</span></p>
+</div>
+
+<div style="background:#fff;padding:20px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);color:#000;">
+<h3>Tam Kỳ → Hội An</h3>
+<p>🚗 Xe 4 chỗ: <span style="color:red;font-weight:bold;">500.000đ</span></p>
+<p>🚙 Xe 7 chỗ: <span style="color:red;font-weight:bold;">600.000đ</span></p>
+</div>
+
+<div style="background:#fff;padding:20px;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.2);color:#000;">
+<h3>Tam Kỳ → Thăng Bình / Nam Phước</h3>
+<p>🚗 Xe 4 chỗ: <span style="color:red;font-weight:bold;">300.000đ</span></p>
+<p>🚙 Xe 7 chỗ: <span style="color:red;font-weight:bold;">500.000đ</span></p>
+</div>
+
+</div>
+<h2>ĐÁNH GIÁ KHÁCH HÀNG</h2>
+<div class="review">★★★★★ 5.0 / 5.0</div>
+<p>Khách hàng hài lòng – Đưa đón đúng giờ – Tài xế nhiệt tình</p>
+
+<h2>HÌNH ẢNH XE</h2>
+<img src="https://images.unsplash.com/photo-1511919884226-fd3cad34687c" alt="Taxi Tam Kỳ">
+<img src="https://images.unsplash.com/photo-1502877338535-766e1452684a" alt="Xe quay đầu Tam Kỳ">
+
+<h2>VỊ TRÍ TẠI TAM KỲ</h2>
+
 <iframe 
-src="https://www.google.com/maps?q=Tam%20Ky%20Quang%20Nam&output=embed"
-width="100%" height="300" style="border:0;" allowfullscreen="">
+src="https://www.google.com/maps?q=Tam+Kỳ,+Quảng+Nam&output=embed"
+width="100%" 
+height="300" 
+style="border:0;border-radius:15px;"
+allowfullscreen=""
+loading="lazy">
 </iframe>
+
+<br><br>
+
+<a href="tel:0904000047" class="call-btn">
+📞 GỌI XE NGAY
+</a>
+
 </div>
 
-<a href="tel:0904000047" class="float-btn call shake">📞</a>
-<a href="https://zalo.me/0904000047" class="float-btn zalo">Z</a>
-<a href="https://www.facebook.com/" class="float-btn fb">f</a>
+<div class="footer">
+© 2026 Taxi Tam Kỳ | Hotline: 0904 000 047
+</div>
+
+<a href="https://zalo.me/0904000047" class="zalo">
+💬 ZALO
+</a>
 
 </body>
 </html>
