--- a/index.html
+++ b/index.html
@@ -3,164 +3,145 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Taxi Tam Kỳ - Xe Quay Đầu Giá Rẻ 24/7</title>
-<meta name="description" content="Taxi Tam Kỳ, xe quay đầu giá rẻ 24/7. Gọi ngay 0904000047. Phục vụ Tam Kỳ, Núi Thành, Phú Ninh, Đà Nẵng, Tiên Phước, Thăng Bình, Nam Phước.">
+
+<title>Taxi Tam Kỳ Giá Rẻ 24/7 | 0904 000 047</title>
+<meta name="description" content="Taxi Tam Kỳ xe 4 chỗ đi Đà Nẵng, Tiên Phước, Núi Thành, Nam Phước giá rẻ. Gọi 0904 000 047 phục vụ 24/7.">
+<meta name="keywords" content="taxi tam kỳ, taxi tam ky, xe tam kỳ đà nẵng, taxi quảng nam">
 
 <style>
 body{
 margin:0;
-font-family:Arial, sans-serif;
-background:#111;
-color:#fff;
+font-family:Arial;
+background:#f4f7fb;
+color:#333;
+scroll-behavior:smooth;
 }
 
 header{
-background:url('https://images.unsplash.com/photo-1502877338535-766e1452684a') center/cover;
-height:90vh;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
+background:linear-gradient(90deg,#0033cc,#00c6ff);
+color:white;
 text-align:center;
-padding:20px;
+padding:70px 20px;
 }
 
 header h1{
-font-size:40px;
-background:rgba(0,0,0,0.6);
-padding:15px 25px;
-border-radius:10px;
+margin:0;
+font-size:38px;
 }
 
 header p{
-font-size:20px;
+font-size:18px;
 margin-top:10px;
-background:rgba(0,0,0,0.6);
-padding:10px 20px;
-border-radius:8px;
 }
 
-.btn{
+.btn-main{
 display:inline-block;
-margin:10px;
-padding:15px 25px;
-font-size:18px;
+margin-top:25px;
+padding:15px 35px;
+background:#ffcc00;
+color:#000;
+font-weight:bold;
 border-radius:50px;
 text-decoration:none;
-font-weight:bold;
+font-size:20px;
 transition:0.3s;
 }
 
-.call{
-background:#FFD700;
-color:#000;
+.btn-main:hover{
+background:#ff9900;
 }
 
-.zalo{
-background:#00aaff;
-color:#fff;
+.section{
+padding:60px 20px;
+max-width:1100px;
+margin:auto;
 }
 
-.btn:hover{
-transform:scale(1.05);
-}
-
-section{
-padding:50px 20px;
+h2{
 text-align:center;
+margin-bottom:40px;
+color:#0033cc;
+font-size:30px;
 }
 
-.cards{
+.car-img{
+width:100%;
+border-radius:25px;
+box-shadow:0 15px 35px rgba(0,0,0,0.1);
+transition:0.4s;
+}
+
+.car-img:hover{
+transform:scale(1.03);
+}
+
+.price-table{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:20px;
-margin-top:30px;
+gap:30px;
 }
 
-.card{
-background:#222;
-padding:20px;
-border-radius:15px;
-box-shadow:0 0 15px rgba(255,215,0,0.3);
+.price-box{
+background:white;
+padding:35px;
+border-radius:25px;
+box-shadow:0 15px 30px rgba(0,0,0,0.08);
+text-align:center;
+transition:0.4s;
 }
 
-.card img{
-width:100%;
-border-radius:10px;
+.price-box:hover{
+transform:translateY(-10px);
+}
+
+.price-box h3{
+color:#0033cc;
 }
 
 .price{
-font-size:22px;
-color:#FFD700;
-margin-top:10px;
+font-size:32px;
+color:red;
+font-weight:bold;
+margin:15px 0;
 }
 
-.area-box{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-gap:15px;
-margin-top:30px;
+.review-box{
+background:white;
+padding:30px;
+border-radius:20px;
+box-shadow:0 10px 25px rgba(0,0,0,0.08);
+margin-bottom:20px;
 }
 
-.area{
-background:#222;
-padding:15px;
-border-radius:10px;
-border:1px solid #FFD700;
+.review-box strong{
+color:#0033cc;
 }
 
-.review{
-background:#222;
-margin-top:30px;
-padding:20px;
-border-radius:10px;
+.stars{
+color:gold;
+font-size:18px;
 }
 
-.floating{
+.call-fixed{
 position:fixed;
 bottom:20px;
 right:20px;
-display:flex;
-flex-direction:column;
-gap:10px;
+background:red;
+color:white;
+padding:15px 22px;
+border-radius:50px;
+font-weight:bold;
+text-decoration:none;
+box-shadow:0 5px 20px rgba(0,0,0,0.3);
 z-index:999;
 }
 
-.floating a{
-width:60px;
-height:60px;
-border-radius:50%;
-display:flex;
-justify-content:center;
-align-items:center;
-font-size:30px;
-text-decoration:none;
-color:#fff;
-animation:shake 1.5s infinite;
-}
-
-.phone-float{
-background:#FFD700;
-color:#000;
-}
-
-.zalo-float{
-background:#00aaff;
-}
-
-@keyframes shake{
-0%{transform:translateX(0);}
-25%{transform:translateX(-3px);}
-50%{transform:translateX(3px);}
-75%{transform:translateX(-3px);}
-100%{transform:translateX(0);}
-}
-
 footer{
-background:#000;
-padding:20px;
+background:#111;
+color:white;
 text-align:center;
-font-size:14px;
+padding:30px 20px;
+margin-top:40px;
 }
 </style>
 </head>
@@ -168,150 +149,77 @@ font-size:14px;
 <body>
 
 <header>
-<h1>TAXI TAM KỲ - XE QUAY ĐẦU 24/7</h1>
-<p>Giá Rẻ - Đúng Giờ - Phục Vụ Tận Tâm</p>
-<a href="tel:0904000047" class="btn call">📞 GỌI NGAY 0904 000 047</a>
-<a href="https://zalo.me/0904000047" class="btn zalo">💬 CHAT ZALO</a>
+<h1>🚖 TAXI TAM KỲ 24/7</h1>
+<p>Xe 4 Chỗ Đời Mới – Giá Rẻ – Đón Nhanh Tận Nơi</p>
+<a class="btn-main" href="tel:0904000047">📞 GỌI NGAY 0904 000 047</a>
 </header>
 
-<section>
-<h2>DÒNG XE PHỤC VỤ</h2>
-<div class="cards">
-<div class="card">
-<img src="https://i.imgur.com/7Xq7Z8B.jpg">
-<h3>SUV 5 Chỗ</h3>
-<p>Rộng rãi, tiện nghi</p>
+<div class="section">
+<h2>🚗 Xe Đời Mới Sạch Sẽ</h2>
+<img class="car-img" src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&w=1200&q=60">
 </div>
 
-<div class="card">
-<img src="https://i.imgur.com/FuG9b2m.jpg">
-<h3>Xpander 7 Chỗ</h3>
-<p>Gia đình, nhóm bạn</p>
+<div class="section">
+<h2>💎 BẢNG GIÁ VIP XE 4 CHỖ</h2>
+
+<div class="price-table">
+
+<div class="price-box">
+<h3>Tam Kỳ ➝ Đà Nẵng</h3>
+<div class="price">500.000đ</div>
+<p>Đi riêng – Không ghép khách</p>
 </div>
 
-<div class="card">
-<img src="https://i.imgur.com/Th1b6aL.jpg">
-<h3>4 Chỗ Tiết Kiệm</h3>
-<p>Giá tốt nhất</p>
+<div class="price-box">
+<h3>Tam Kỳ ➝ Tiên Phước</h3>
+<div class="price">300.000đ</div>
+<p>Đón tận nơi</p>
 </div>
 
-<div class="card">
-<img src="https://i.imgur.com/j6xQx5b.jpg">
-<h3>Sedan Cao Cấp</h3>
-<p>Đi tỉnh, công tác</p>
-</div>
-</div>
-</section>
-
-<section>
-<h2>KHU VỰC HOẠT ĐỘNG</h2>
-<div class="area-box">
-<div class="area">Tam Kỳ</div>
-<div class="area">Núi Thành</div>
-<div class="area">Phú Ninh</div>
-<div class="area">Đà Nẵng</div>
-<div class="area">Tiên Phước</div>
-<div class="area">Thăng Bình</div>
-<div class="area">Nam Phước</div>
-</div>
-</<section style="background:#111;padding:60px 20px;text-align:center;">
-<h2 style="font-size:32px;color:#FFD700;margin-bottom:40px;">
-BẢNG GIÁ XE 4 CHỖ CAO CẤP
-</h2>
-
-<div style="
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:25px;
-max-width:1100px;
-margin:auto;
-">
-
-<div style="
-background:linear-gradient(145deg,#1a1a1a,#000);
-border:2px solid #FFD700;
-border-radius:20px;
-padding:30px;
-box-shadow:0 0 25px rgba(255,215,0,0.4);
-transition:0.3s;
-">
-<h3 style="font-size:22px;">Tam Kỳ ↔ Đà Nẵng</h3>
-<p style="font-size:36px;color:#FFD700;font-weight:bold;margin:20px 0;">
-500.000đ
-</p>
-<p>Xe riêng • Không ghép • Đưa đón tận nơi</p>
+<div class="price-box">
+<h3>Tam Kỳ ➝ Núi Thành</h3>
+<div class="price">300.000đ</div>
+<p>Đi ngay khi gọi</p>
 </div>
 
-<div style="
-background:linear-gradient(145deg,#1a1a1a,#000);
-border:2px solid #FFD700;
-border-radius:20px;
-padding:30px;
-box-shadow:0 0 25px rgba(255,215,0,0.4);
-">
-<h3 style="font-size:22px;">Tam Kỳ ↔ Tiên Phước</h3>
-<p style="font-size:36px;color:#FFD700;font-weight:bold;margin:20px 0;">
-300.000đ
-</p>
-<p>Giá trọn gói • Không phát sinh</p>
-</div>
-
-<div style="
-background:linear-gradient(145deg,#1a1a1a,#000);
-border:2px solid #FFD700;
-border-radius:20px;
-padding:30px;
-box-shadow:0 0 25px rgba(255,215,0,0.4);
-">
-<h3 style="font-size:22px;">Tam Kỳ ↔ Núi Thành</h3>
-<p style="font-size:36px;color:#FFD700;font-weight:bold;margin:20px 0;">
-300.000đ
-</p>
-<p>Phục vụ 24/7 • Đi ngay khi gọi</p>
-</div>
-
-<div style="
-background:linear-gradient(145deg,#1a1a1a,#000);
-border:2px solid #FFD700;
-border-radius:20px;
-padding:30px;
-box-shadow:0 0 25px rgba(255,215,0,0.4);
-">
-<h3 style="font-size:22px;">Tam Kỳ ↔ Nam Phước</h3>
-<p style="font-size:36px;color:#FFD700;font-weight:bold;margin:20px 0;">
-350.000đ
-</p>
-<p>Xe đời mới • Tài xế chuyên nghiệp</p>
+<div class="price-box">
+<h3>Tam Kỳ ➝ Nam Phước</h3>
+<div class="price">350.000đ</div>
+<p>Giá trọn gói</p>
 </div>
 
 </div>
-
-<p style="margin-top:40px;font-size:14px;color:#aaa;">
-* Giá có thể thay đổi nhẹ theo thời điểm. Vui lòng gọi 0904 000 047 để xác nhận.
-</p>
-
-</section>>
-
-<section>
-<h2>ĐÁNH GIÁ KHÁCH HÀNG</h2>
-<div class="review">
-⭐⭐⭐⭐⭐<br>
-Đi đúng giờ, xe sạch sẽ, tài xế nhiệt tình.
 </div>
-<div class="review">
-⭐⭐⭐⭐⭐<br>
-Giá rẻ hơn taxi hãng, sẽ ủng hộ lâu dài.
+
+<div class="section">
+<h2>⭐ Khách Hàng Nói Gì?</h2>
+
+<div class="review-box">
+<strong>Anh Minh (Tam Kỳ)</strong>
+<div class="stars">★★★★★</div>
+<p>Gọi là có xe liền, tài xế vui vẻ, đi Đà Nẵng rất thoải mái.</p>
 </div>
-</section>
+
+<div class="review-box">
+<strong>Chị Hương (Núi Thành)</strong>
+<div class="stars">★★★★★</div>
+<p>Giá đúng như báo, không phát sinh thêm. Sẽ đi tiếp.</p>
+</div>
+
+<div class="review-box">
+<strong>Anh Tuấn (Tiên Phước)</strong>
+<div class="stars">★★★★★</div>
+<p>Xe sạch, chạy êm, rất chuyên nghiệp.</p>
+</div>
+
+</div>
 
 <footer>
-© 2026 Taxi Tam Kỳ - Hotline: 0904 000 047
+Taxi Tam Kỳ – Hotline: 0904 000 047<br>
+Phục vụ toàn khu vực Quảng Nam – Đà Nẵng
 </footer>
 
-<div class="floating">
-<a href="tel:0904000047" class="phone-float">📞</a>
-<a href="https://zalo.me/0904000047" class="zalo-float">💬</a>
-</div>
+<a class="call-fixed" href="tel:0904000047">📞 0904 000 047</a>
 
 </body>
 </html>
