--- a/index.html
+++ b/index.html
@@ -3,145 +3,96 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Taxi Tam Kỳ Giá Rẻ 24/7 | 0904 000 047</title>
-<meta name="description" content="Taxi Tam Kỳ xe 4 chỗ đi Đà Nẵng, Tiên Phước, Núi Thành, Nam Phước giá rẻ. Gọi 0904 000 047 phục vụ 24/7.">
-<meta name="keywords" content="taxi tam kỳ, taxi tam ky, xe tam kỳ đà nẵng, taxi quảng nam">
+<title>Taxi Tam Kỳ 24/7 - 0904 000 047</title>
+<meta name="description" content="Taxi Tam Kỳ 24/7 - Chuyên tuyến Tam Kỳ đi Đà Nẵng, Núi Thành, Tiên Phước. Giá rẻ - Xe đời mới - Gọi ngay 0904 000 047">
 
 <style>
 body{
 margin:0;
 font-family:Arial;
-background:#f4f7fb;
-color:#333;
-scroll-behavior:smooth;
+background:#111;
+color:white;
 }
 
 header{
-background:linear-gradient(90deg,#0033cc,#00c6ff);
-color:white;
+background:linear-gradient(90deg,#000,#222);
+padding:20px;
 text-align:center;
-padding:70px 20px;
 }
 
 header h1{
+color:#FFD700;
 margin:0;
-font-size:38px;
+font-size:28px;
 }
 
-header p{
-font-size:18px;
-margin-top:10px;
-}
-
-.btn-main{
-display:inline-block;
-margin-top:25px;
-padding:15px 35px;
-background:#ffcc00;
-color:#000;
-font-weight:bold;
-border-radius:50px;
-text-decoration:none;
-font-size:20px;
-transition:0.3s;
-}
-
-.btn-main:hover{
-background:#ff9900;
-}
-
-.section{
-padding:60px 20px;
-max-width:1100px;
-margin:auto;
-}
-
-h2{
-text-align:center;
-margin-bottom:40px;
-color:#0033cc;
-font-size:30px;
-}
-
-.car-img{
-width:100%;
-border-radius:25px;
-box-shadow:0 15px 35px rgba(0,0,0,0.1);
-transition:0.4s;
-}
-
-.car-img:hover{
-transform:scale(1.03);
-}
-
-.price-table{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:30px;
-}
-
-.price-box{
-background:white;
-padding:35px;
-border-radius:25px;
-box-shadow:0 15px 30px rgba(0,0,0,0.08);
-text-align:center;
-transition:0.4s;
-}
-
-.price-box:hover{
-transform:translateY(-10px);
-}
-
-.price-box h3{
-color:#0033cc;
-}
-
-.price{
-font-size:32px;
-color:red;
-font-weight:bold;
-margin:15px 0;
-}
-
-.review-box{
-background:white;
-padding:30px;
-border-radius:20px;
-box-shadow:0 10px 25px rgba(0,0,0,0.08);
-margin-bottom:20px;
-}
-
-.review-box strong{
-color:#0033cc;
-}
-
-.stars{
-color:gold;
-font-size:18px;
-}
-
-.call-fixed{
+.call-btn{
 position:fixed;
 bottom:20px;
 right:20px;
-background:red;
-color:white;
-padding:15px 22px;
+background:#FFD700;
+color:black;
+padding:15px 20px;
 border-radius:50px;
 font-weight:bold;
 text-decoration:none;
-box-shadow:0 5px 20px rgba(0,0,0,0.3);
+box-shadow:0 0 15px #FFD700;
 z-index:999;
 }
 
-footer{
-background:#111;
-color:white;
+.section{
+padding:40px 20px;
 text-align:center;
-padding:30px 20px;
-margin-top:40px;
+}
+
+.price-box{
+background:#1a1a1a;
+padding:20px;
+margin:15px auto;
+max-width:400px;
+border-radius:15px;
+border:1px solid #FFD700;
+}
+
+.price-box h3{
+color:#FFD700;
+margin-bottom:10px;
+}
+
+.review{
+background:#222;
+padding:20px;
+margin:15px auto;
+max-width:500px;
+border-radius:15px;
+}
+
+form{
+max-width:500px;
+margin:auto;
+}
+
+input,textarea{
+width:100%;
+padding:12px;
+margin:10px 0;
+border-radius:8px;
+border:none;
+}
+
+button{
+background:#FFD700;
+border:none;
+padding:15px;
+width:100%;
+border-radius:10px;
+font-weight:bold;
+}
+
+iframe{
+width:100%;
+height:300px;
+border-radius:15px;
 }
 </style>
 </head>
@@ -150,76 +101,71 @@ margin-top:40px;
 
 <header>
 <h1>🚖 TAXI TAM KỲ 24/7</h1>
-<p>Xe 4 Chỗ Đời Mới – Giá Rẻ – Đón Nhanh Tận Nơi</p>
-<a class="btn-main" href="tel:0904000047">📞 GỌI NGAY 0904 000 047</a>
+<p>Gọi ngay: <b style="color:#FFD700;">0904 000 047</b></p>
 </header>
 
 <div class="section">
-<h2>🚗 Xe Đời Mới Sạch Sẽ</h2>
-<img class="car-img" src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&w=1200&q=60">
+<h2>BẢNG GIÁ XE 4 CHỖ</h2>
+
+<div class="price-box">
+<h3>Tam Kỳ → Đà Nẵng</h3>
+<p><b>500.000đ</b></p>
+</div>
+
+<div class="price-box">
+<h3>Tam Kỳ → Tiên Phước</h3>
+<p><b>300.000đ</b></p>
+</div>
+
+<div class="price-box">
+<h3>Tam Kỳ → Núi Thành</h3>
+<p><b>300.000đ</b></p>
+</div>
+
+<div class="price-box">
+<h3>Tam Kỳ → Nam Phước</h3>
+<p><b>350.000đ</b></p>
+</div>
+
 </div>
 
 <div class="section">
-<h2>💎 BẢNG GIÁ VIP XE 4 CHỖ</h2>
+<h2>⭐ KHÁCH HÀNG ĐÁNH GIÁ</h2>
 
-<div class="price-table">
-
-<div class="price-box">
-<h3>Tam Kỳ ➝ Đà Nẵng</h3>
-<div class="price">500.000đ</div>
-<p>Đi riêng – Không ghép khách</p>
+<div class="review">
+<p>⭐⭐⭐⭐⭐</p>
+<p>Xe sạch sẽ, tài xế nhiệt tình. - Anh Minh</p>
 </div>
 
-<div class="price-box">
-<h3>Tam Kỳ ➝ Tiên Phước</h3>
-<div class="price">300.000đ</div>
-<p>Đón tận nơi</p>
+<div class="review">
+<p>⭐⭐⭐⭐⭐</p>
+<p>Giá đúng như báo, không phát sinh. - Chị Lan</p>
 </div>
 
-<div class="price-box">
-<h3>Tam Kỳ ➝ Núi Thành</h3>
-<div class="price">300.000đ</div>
-<p>Đi ngay khi gọi</p>
-</div>
-
-<div class="price-box">
-<h3>Tam Kỳ ➝ Nam Phước</h3>
-<div class="price">350.000đ</div>
-<p>Giá trọn gói</p>
-</div>
-
-</div>
 </div>
 
 <div class="section">
-<h2>⭐ Khách Hàng Nói Gì?</h2>
+<h2>🚗 ĐẶT XE NHANH</h2>
 
-<div class="review-box">
-<strong>Anh Minh (Tam Kỳ)</strong>
-<div class="stars">★★★★★</div>
-<p>Gọi là có xe liền, tài xế vui vẻ, đi Đà Nẵng rất thoải mái.</p>
-</div>
-
-<div class="review-box">
-<strong>Chị Hương (Núi Thành)</strong>
-<div class="stars">★★★★★</div>
-<p>Giá đúng như báo, không phát sinh thêm. Sẽ đi tiếp.</p>
-</div>
-
-<div class="review-box">
-<strong>Anh Tuấn (Tiên Phước)</strong>
-<div class="stars">★★★★★</div>
-<p>Xe sạch, chạy êm, rất chuyên nghiệp.</p>
-</div>
+<form>
+<input type="text" placeholder="Họ tên">
+<input type="tel" placeholder="Số điện thoại">
+<textarea placeholder="Điểm đón - Điểm đến"></textarea>
+<button type="submit">GỬI YÊU CẦU</button>
+</form>
 
 </div>
 
-<footer>
-Taxi Tam Kỳ – Hotline: 0904 000 047<br>
-Phục vụ toàn khu vực Quảng Nam – Đà Nẵng
-</footer>
+<div class="section">
+<h2>📍 VỊ TRÍ TAM KỲ</h2>
 
-<a class="call-fixed" href="tel:0904000047">📞 0904 000 047</a>
+<iframe 
+src="https://www.google.com/maps?q=Tam+Kỳ,+Quảng+Nam&output=embed">
+</iframe>
+
+</div>
+
+<a href="tel:0904000047" class="call-btn">📞 GỌI NGAY</a>
 
 </body>
 </html>
